# mini-linter

./: AGENTS.md  README.md  pyproject.toml  requirements.txt
.agents/: context.md  review-checklist.md  rule-authoring.md  task-template.md
docs/: developer-guide.md  plugins.md  user-guide.md
lang/: zh_cn.json
mini_linter/: __init__.py  cli.py  config.py  core.py  init_templates.py  lang.py  models.py  plugins.py
mini_linter/lang/: en_us.json  zh_cn.json
mini_linter/rules/: __init__.py  agent.py  base.py  comments.py  imports.py  style.py
tests/: test_agent_docs.py  test_cli.py  test_config.py  test_lang.py  test_plugins.py  test_rules.py
tests/contexts/rules/: test_rule_contexts.py
tests/contexts/sets/rules/: conftest.py  import_forbidden_fail.py  import_forbidden_pass.py  style_file_fail.py  style_file_pass.py  style_function_fail.py  style_function_pass.py
tests/contexts/sets/rules/architecture/app/: fail_service.py  pass_service.py
tests/contexts/sets/rules/architecture/domain/: model.py
tests/contexts/sets/rules/architecture/infra/: db.py
tests/contexts/sets/rules/tests/: naming_fail.py  test_naming_pass.py
